# SendItPy

./: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt
src/: senditpy.py
